Add rough outline to linear algebra notebooks.

--- a/docs/source/notebooks/linear_algebra_basics.ipynb
+++ b/docs/source/notebooks/linear_algebra_basics.ipynb
@@ -6,7 +6,27 @@
    "source": [
     "# Linear algebra basics\n",
     "\n",
-    "A short introduction to the parts of linear algebra that *xROM-OS* relies upon."
+    "This notebook provides in introduction to essential elements of linear algebra needed to understand the dimensionality reduction algorithms performed by *flowTorch*.\n",
+    "\n",
+    "## Multiplication\n",
+    "### Matrix-vector multiplication\n",
+    "### Matrix-matrix multiplication\n",
+    "\n",
+    "## Special types of matrices\n",
+    "### Identity matrix\n",
+    "### Orthogonal matrix\n",
+    "### Orthonormal matrix\n",
+    "### Unitary matrix\n",
+    "\n",
+    "## Eigen-decomposition\n",
+    "### ...\n",
+    "### Application to linear operators\n",
+    "\n",
+    "## Singular value decomposition\n",
+    "### ...\n",
+    "### Low-rank approximation\n",
+    "### Least-squares approximation\n",
+    "### Connection so Eigen-decomposition"
    ]
   },
   {
@@ -33,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
