My first commit

--- a/docs/source/notebooks/linear_algebra_basics.ipynb
+++ b/docs/source/notebooks/linear_algebra_basics.ipynb
@@ -31,10 +31,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  6 -10  27]\n",
+      " [ 14  18  27]\n",
+      " [  4  12  36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A= np.array([[3, -5, 3],\n",
+    "            \n",
+    "            [7,9,3],\n",
+    "            \n",
+    "            [2,6,4]])\n",
+    "\n",
+    "B= np.array([2, 2, 9])\n",
+    "\n",
+    "c=A*B\n",
+    "\n",
+    "print(c)"
+   ]
   }
  ],
  "metadata": {
