Add dot product to linear algebra notebook ; related to issue #7

--- a/docs/source/notebooks/linear_algebra_basics.ipynb
+++ b/docs/source/notebooks/linear_algebra_basics.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -231,28 +237,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created tensor of shape  torch.Size([4, 3])\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "tensor([1, 4])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# accessing the first two elements in the second column\n",
+    "print(\"Created tensor of shape \", X.size())\n",
+    "X\n",
     "X[:2, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +276,7 @@
        "tensor([7, 8])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -384,11 +399,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[3., 3., 3.],\n",
-       "        [3., 3., 3.]])"
+       "tensor([[-1.,  1.,  3.],\n",
+       "        [ 5.,  7.,  9.],\n",
+       "        [11., 13., 15.],\n",
+       "        [17., 19., 21.]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -493,16 +510,18 @@
        "tensor(9.)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import torch as pt\n",
     "a = pt.tensor([1.0, 2.0, 2.0])\n",
     "# Frobenius/2-norm\n",
     "len_a = pt.norm(a)\n",
     "assert pt.dot(a, a) == len_a**2\n",
+    "\n",
     "pt.dot(a, a)"
    ]
   },
@@ -510,29 +529,215 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) The angle between two normalized vectors is equal to the cosine of the enclosed angle: ..."
+    "2) The angle between two normalized vectors is equal to the cosine of the enclosed angle: \n",
+    "$$\n",
+    "  {\\displaystyle \\varphi =\\arccos {\\frac {\\langle \\mathbf{a} ,{\\mathbf {b}\\rangle}}{|{\\mathbf {a}}||{\\mathbf {b}}|}}}\n",
+    "$$\n",
+    "\n",
+    "example:$\\mathbf {a} = (1,1,1),\\mathbf {b} = (4,2,2) $ <br />\n",
+    "        $|{\\mathbf {a}}|= {\\sqrt {1+1+1}} = 1,7321$ ,\n",
+    "        $|{\\mathbf {b}}|= {\\sqrt {4+2+2}} = 4,8990$ ,\n",
+    "        $\\langle \\mathbf{a}, \\mathbf{b} \\rangle = 1\\times4+1\\times2+1\\times2 = 8 $<br />\n",
+    "        ${\\displaystyle \\varphi =\\arccos {\\frac {8}{1,7321\\times4,8990}=0.3398}}$\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.9428), tensor(0.3398))"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = pt.tensor([1.0, 1.0, 1.0])\n",
+    "b = pt.tensor([4.0, 2.0, 2.0])\n",
+    "c = pt.dot(a, b)/(pt.norm(a)*pt.norm(b)) \n",
+    "angle = pt.acos(c) # angle in radians\n",
+    "c,angle\n",
+    "\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cross product"
+    "3) To find a unit vector with the same direction as a given vector, we divide by the magnitude of the vector : <br />\n",
+    "\n",
+    "$$ {\\displaystyle u = {\\frac { \\mathbf{a} }{||{\\mathbf {a}}||}}}= {\\frac {[x,y,z]}{\\sqrt {{x}^{2}+{y}^{2}+{z}^{2}}}} $$ <br />\n",
+    "\n",
+    "example:<br />  All unit vectors have a magnitude of 1, so to verify we are correct: $ \\mathbf{a} = (3,6,1)  $ $,$ $ ||{\\mathbf {a}}|| = \\sqrt {46} $ <br />\n",
+    "\n",
+    "$||{\\mathbf {u}}||$ = ${\\sqrt {(\\frac {3}{\\sqrt {46}})^{2}+(\\frac {6}{\\sqrt {46} })^{2}+(\\frac {1}{\\sqrt {46} })^{2}}}$ = 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0000)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = pt.tensor([3.0, 6.0, 1.0])\n",
+    "divisor = pt.norm(a)\n",
+    "b = pt.div(a, divisor)\n",
+    "a_lenght = pt.norm(b)\n",
+    "a_lenght\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6) two vectors are orthogonal if and only if their dot product is zero :\n",
+    "$${\\mathbf  {{a}}={\\begin{pmatrix}x_1\\\\0\\end{pmatrix}},\\quad {\\mathbf{b}}={\\begin{pmatrix}0\\\\x_2\\end{pmatrix}}}$$\n",
+    "example: ${\\mathbf  {{a}}={\\begin{pmatrix}3\\\\0\\end{pmatrix}},\\quad {\\mathbf{b}}={\\begin{pmatrix}0\\\\2\\end{pmatrix}}}$ ,$\\quad$ ${\\displaystyle \\varphi =\\arccos {\\frac {{0}}{\\sqrt {2}\\times{\\sqrt {3}}}=90^{\\circ} }}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(90.)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = pt.tensor([3.0, 0.0])\n",
+    "b = pt.tensor([0.0, 2.0])\n",
+    "c = pt.dot(a, b)/(pt.norm(a)*pt.norm(b)) \n",
+    "d = pt.acos(c) \n",
+    "angle = pt.rad2deg(d) # angle in radians\n",
+    "angle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross product\n",
+    "#### The cross product is a vector operation that acts on vectors in three dimensions and results in another vector in three dimensions is defined as:\n",
+    "\n",
+    " $$  \\mathbf{a}\\times\\mathbf{b} = \\sum_{i,j,k=1}^3 \\varepsilon_{ijk} a_i b_j \\vec e_k\\,. $$ <br />\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "1) The cross product of these two vectors :\n",
+    "$$\n",
+    "\\mathbf{a}=\\begin{pmatrix} a_1 \\\\ \\vdots \\\\a_n \\end{pmatrix} \\text{ and }\\mathbf{b}=\\begin{pmatrix} b_1 \\\\ \\vdots \\\\b_n \\end{pmatrix}\n",
+    "$$\n",
+    "would be given by the formula :\n",
+    "\n",
+    "$$\n",
+    "  {\\mathbf{a}}\\times{\\mathbf{b}}=\\begin{pmatrix}a_1 \\\\ a_2 \\\\ a_3\\end{pmatrix}\\times\\begin{pmatrix}b_1 \\\\ b_2 \\\\ b_3 \\end{pmatrix}=\\begin{pmatrix}a_2b_3 - a_3b_2 \\\\a_3b_1 - a_1b_3 \\\\a_1b_2 - a_2b_1\\end{pmatrix}\\,.\n",
+    "$$<br />\n",
+    "\n",
+    "example:\n",
+    "$\n",
+    "\\mathbf{a}=\\begin{pmatrix} 1 \\\\ 2 \\\\ 3 \\end{pmatrix} \\text{ , }\\mathbf{b}=\\begin{pmatrix} 3 \\\\ 2 \\\\ 1 \\end{pmatrix}\n",
+    "$<br />\n",
+    "\n",
+    "${\\mathbf{a}}\\times{\\mathbf{b}}=\\begin{pmatrix}1 \\\\ 2 \\\\ 3 \\end{pmatrix}\\times\\begin{pmatrix}3 \\\\ 2 \\\\ 1 \\end{pmatrix}=\\begin{pmatrix}2\\times1 - 3\\times2 \\\\3\\times3 - 1\\times1 \\\\1\\times2 - 2\\times3\\end{pmatrix}\\,=\\begin{pmatrix}-4 \\\\ 8 \\\\ -4\\end{pmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-4.,  8., -4.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = pt.tensor([1.0, 2.0, 3.0])\n",
+    "b = pt.tensor([3.0, 2.0, 1.0])\n",
+    "pt.cross(a, b)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) The cross product can also be expressed as the formal determinant:\n",
+    "$$\n",
+    "{\\displaystyle \\mathbf {a\\times b} ={\\begin{vmatrix}\\mathbf {i} &\\mathbf {j} &\\mathbf {k} \\\\a_{1}&a_{2}&a_{3}\\\\b_{1}&b_{2}&b_{3}\\\\\\end{vmatrix}}}\n",
+    "$$\n",
+    "This determinant can be computed using cofactor expansion.Using cofactor expansion, it expands to:\n",
+    "$$\n",
+    "{\\displaystyle {\\begin{aligned}\\mathbf {a\\times b} &={\\begin{vmatrix}a_{2}&a_{3}\\\\b_{2}&b_{3}\\end{vmatrix}}\\mathbf {i} -{\\begin{vmatrix}a_{1}&a_{3}\\\\b_{1}&b_{3}\\end{vmatrix}}\\mathbf {j} +{\\begin{vmatrix}a_{1}&a_{2}\\\\b_{1}&b_{2}\\end{vmatrix}}\\mathbf {k} \\\\&=(a_{2}b_{3}-a_{3}b_{2})\\mathbf {i} -(a_{1}b_{3}-a_{3}b_{1})\\mathbf {j} +(a_{1}b_{2}-a_{2}b_{1})\\mathbf {k} ,\\end{aligned}}}\n",
+    "$$\n",
+    "Example:${\\displaystyle \\mathbf {a\\times b} ={\\begin{vmatrix}  6&1 &1 \\\\4&-2&5\\\\2&8&7\\\\\\end{vmatrix}}}$\n",
+    "${\\displaystyle {\\begin{aligned}={\\mathbf {(6)}\\times\\mathbf{det}\\begin{vmatrix}-2&5\\\\8&7\\end{vmatrix}} -{\\mathbf {(-1}\\times\\mathbf{det}\\begin{vmatrix}4&5\\\\2&7\\end{vmatrix}} +{\\mathbf {1}\\times\\mathbf{det}\\begin{vmatrix}4&2\\\\2&8\\end{vmatrix}} =-306\\end{aligned}}}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-306.)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "axb = pt.tensor([[6.0,1.0,1.0], [4.0, -2.0, 5.0], [2.0,8.0,7.0]]) \n",
+    "det = pt.det(axb)\n",
+    "det\n"
+   ]
   },
   {
    "cell_type": "markdown",
