Revise linear algebra notebook according to Richard's comments.

--- a/docs/source/notebooks/linear_algebra_basics.ipynb
+++ b/docs/source/notebooks/linear_algebra_basics.ipynb
@@ -6,15 +6,18 @@
    "source": [
     "# Linear algebra with PyTorch\n",
     "\n",
-    "This notebook introduces some frequently used linear Algebra and tensor operations in PyTorch."
+    "This notebook introduces some frequently used linear Algebra and tensor operations in PyTorch. For a general introduction to important concepts of linear Algebra, refer to:\n",
+    "\n",
+    "> [Introduction to linear Algebra](https://math.mit.edu/~gs/linearalgebra/) by Gilbert Strang"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import PyTorch and plotting libraries\n",
     "import torch as pt\n",
     "import visualization as vis\n",
     "import matplotlib.pyplot as plt\n",
@@ -165,7 +168,7 @@
    "source": [
     "### Accessing elements in a tensor\n",
     "\n",
-    "PyTorch tensors support element access via the typical square bracket syntax. Also slicing is supported."
+    "PyTorch tensors support element access via the typical square-bracket syntax. Also slicing is supported."
    ]
   },
   {
@@ -299,6 +302,7 @@
    ],
    "source": [
     "# elementwise addition of a scalar value\n",
+    "# X += 2 is shorthand for X = X + 2\n",
     "X = pt.zeros((2, 3))\n",
     "X += 2\n",
     "X"
@@ -479,9 +483,9 @@
     "The dot product has couple of useful properties; see section 1.2 in [Introduction to linear algebra](https://math.mit.edu/~gs/linearalgebra/).\n",
     "\n",
     "The dot product of a vector with itself is equal to the squared length/magnitude\n",
-    "$\\langle \\mathbf{a}, \\mathbf{a} \\rangle = |\\mathbf{a}|^2_2$\n",
+    "$\\langle \\mathbf{a}, \\mathbf{a} \\rangle = \\left\\|\\mathbf{a}\\right\\|^2$\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "$\\mathbf{a} = [1, 2, 2]^T$, $\\langle \\mathbf{a}, \\mathbf{a} \\rangle = 1^2 + 2^2 + 2^2 = 9$"
    ]
@@ -514,18 +518,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The cosine of the angle enclosed by two normalized vectors is equal to their dot-product: \n",
+    "The cosine of the angle enclosed by two vectors of unit length is equal to their dot-product: \n",
     "$$\n",
-    "  {\\displaystyle \\varphi =\\arccos{\\frac {\\langle \\mathbf{a} ,{\\mathbf {b}\\rangle}}{|{\\mathbf {a}}||{\\mathbf {b}}|}}}\n",
+    "  {\\displaystyle \\varphi =\\arccos{\\frac {\\langle \\mathbf{a} ,{\\mathbf {b}\\rangle}}{\\left\\|{\\mathbf {a}}\\right\\|\\left\\|{\\mathbf {b}}\\right\\|}}}\n",
     "$$\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "$\\mathbf {a} = [1,1,1]^T,\\ \\mathbf {b} = [4,2,2]^T$\n",
     "\n",
-    "$|{\\mathbf {a}}|= {\\sqrt {{{1}^2}+{{1}^2}+{{1}^2}}} = 1.7321$,\n",
+    "$\\left\\|{\\mathbf {a}}\\right\\| = {\\sqrt {{{1}^2}+{{1}^2}+{{1}^2}}} = 1.7321$,\n",
     "\n",
-    "$|{\\mathbf {b}}|= {\\sqrt {{{4}^2}+{{2}^2}+{{2}^2}}} = 4.8990$,\n",
+    "$\\left\\|{\\mathbf {b}}\\right\\| = {\\sqrt {{{4}^2}+{{2}^2}+{{2}^2}}} = 4.8990$,\n",
     "\n",
     "$\\langle \\mathbf{a}, \\mathbf{b} \\rangle = 1\\cdot 4+1\\cdot 2+1\\cdot 2 = 8$\n",
     "\n",
@@ -564,18 +568,18 @@
    "source": [
     "To find a unit vector with the same direction as a given vector, we divide by the vector's magnitude:\n",
     "\n",
-    "$$ {\\displaystyle \\mathbf{u} = {\\frac { \\mathbf{a} }{|{\\mathbf {a}}|}}}$$\n",
+    "$$ {\\displaystyle \\mathbf{u} = {\\frac { \\mathbf{a} }{\\left\\|{\\mathbf {a}}\\right\\|}}}$$\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
-    "$\\mathbf{a} = [3,6,1]^T$, $|{\\mathbf{a}}| = \\sqrt {46}$\n",
+    "$\\mathbf{a} = [3,6,1]^T$, $\\left\\|{\\mathbf{a}}\\right\\| = \\sqrt {46}$\n",
     "\n",
-    "$|{\\mathbf {u}}|$ = ${\\sqrt {(\\frac {3}{\\sqrt {46}})^{2}+(\\frac {6}{\\sqrt {46} })^{2}+(\\frac {1}{\\sqrt {46} })^{2}}}=1$"
+    "$\\left\\|{\\mathbf {u}}\\right\\|$ = ${\\sqrt {(\\frac {3}{\\sqrt {46}})^{2}+(\\frac {6}{\\sqrt {46} })^{2}+(\\frac {1}{\\sqrt {46} })^{2}}}=1$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -584,12 +588,14 @@
        "tensor(1.0000)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# using the div-function is equivalent to elementwise division of a tensor by a scalar in this example\n",
+    "# e.g., b = a / pt.norm(a) yields the same result\n",
     "a = pt.tensor([3.0, 6.0, 1.0])\n",
     "b = pt.div(a, pt.norm(a))\n",
     "a_length = pt.norm(b)\n",
@@ -604,11 +610,11 @@
    "source": [
     "Two vectors are orthogonal if their dot product is zero.\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "$\\mathbf{a}=[3, 0]^T$, $\\mathbf{b}=[0, 2]^T$\n",
     "\n",
-    "${\\displaystyle \\varphi =\\arccos {\\frac {{0}}{\\sqrt {2}\\cdot{\\sqrt {3}}}=90^{\\circ} }}$"
+    "${\\displaystyle \\varphi =\\arccos {\\frac {{3\\cdot 0 + 0\\cdot 2}}{\\sqrt {2}\\cdot{\\sqrt {3}}}=90^{\\circ} }}$"
    ]
   },
   {
@@ -651,7 +657,7 @@
     "\n",
     "where $\\epsilon_{ijk}$ is the [Levi-Civita symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol), and $\\mathbf{e}_k$ is the $k$-th unit vector.\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "$\\mathbf{a}=[1, 2, 3]^T$, $\\mathbf{b}=[3, 2, 1]^T$\n",
     "\n",
@@ -689,16 +695,16 @@
    "source": [
     "The cross product may be used to compute the angle between two vectors:\n",
     "\n",
-    "$${\\displaystyle \\varphi =\\arcsin {\\frac {| \\mathbf{a} \\times{\\mathbf {b}|}}{|{\\mathbf {a}}||{\\mathbf {b}}|}}}$$\n",
+    "$${\\displaystyle \\varphi =\\arcsin {\\frac {\\left\\| \\mathbf{a} \\times \\mathbf {b}\\right\\|}{ \\left\\|{\\mathbf {a}}\\right\\| \\left\\|{\\mathbf {b}}\\right\\|}}}$$\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "$\\mathbf {a} = [1,-2,3]^T,\\mathbf{b} = [-4,5,6]^T$\n",
     "\n",
-    "$|{\\mathbf {a}}|= {\\sqrt {{{1}^2}+{{-2}^2}+{{3}^2}}} = \\sqrt {14}$,\n",
-    "$|{\\mathbf {b}}|= {\\sqrt {{{-4}^2}+{{5}^2}+{{6}^2}}} = \\sqrt {77}$\n",
+    "$\\left\\|{\\mathbf {a}}\\right\\|= {\\sqrt {{{1}^2}+{{-2}^2}+{{3}^2}}} = \\sqrt {14}$,\n",
+    "$\\left\\|{\\mathbf {b}}\\right\\|= {\\sqrt {{{-4}^2}+{{5}^2}+{{6}^2}}} = \\sqrt {77}$\n",
     "\n",
-    "${\\displaystyle |\\mathbf {a\\times b}| ={\\begin{vmatrix}  \\mathbf i& \\mathbf j& \\mathbf k \\\\1&-2&3\\\\-4&5&6\\\\\\end{vmatrix}}}$\n",
+    "${\\displaystyle \\left\\|\\mathbf {a\\times b}\\right\\| ={\\begin{vmatrix}  \\mathbf i& \\mathbf j& \\mathbf k \\\\1&-2&3\\\\-4&5&6\\\\\\end{vmatrix}}}$\n",
     "${\\displaystyle {\\begin{aligned} =(-27)\\mathbf {i} -(18)\\mathbf {j} +(-3)\\mathbf {k}={\\sqrt {{{(-27)}^2}+{{(-18)}^2}+{{(-3)}^2}}=3{\\sqrt{118}}}\\end{aligned}}}$\n",
     "\n",
     "${ \\varphi =\\arccos {\\frac {3\\sqrt{118}}{\\sqrt {14}\\sqrt {77}}=83.0023^\\circ}}$"
@@ -736,13 +742,13 @@
    "source": [
     "The magnitude of the cross product yields the area of the parallelogram spanned by two vectors $\\mathbf {a}$ and $\\mathbf {b}$.\n",
     "\n",
-    "$${\\displaystyle|\\mathbf {a} \\times \\mathbf {b} |=|\\mathbf {a} ||\\mathbf {b} ||\\sin \\varphi |.}$$\n",
+    "$$ A = {\\displaystyle \\left\\|\\mathbf {a} \\times \\mathbf {b} \\right\\|=\\left\\|\\mathbf {a} \\right\\|\\left\\|\\mathbf {b} \\right\\| \\sin \\varphi .}$$\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "$\\mathbf {a} = [1,1,1]^T$, $\\mathbf {b} = [1,1,2]^T$\n",
     "\n",
-    "$\\mathbf{c}=\\mathbf{a}\\times\\mathbf{b} = [1, -1, 0]^T$, $|\\mathbf{c}|=\\sqrt{2}$"
+    "$\\mathbf{c}=\\mathbf{a}\\times\\mathbf{b} = [1, -1, 0]^T$, $\\left\\|\\mathbf{c}\\right\\|=\\sqrt{2}$"
    ]
   },
   {
@@ -781,7 +787,7 @@
     "$$\n",
     "\\mathbf{C} = \\mathbf {a} \\otimes \\mathbf {b} ={\\begin{bmatrix}a_{1}b_{1}&a_{1}b_{2}&\\dots &a_{1}b_{n}\\\\a_{2}b_{1}&a_{2}b_{2}&\\dots &a_{2}b_{n}\\\\\\vdots &\\vdots &\\ddots &\\vdots \\\\a_{m}b_{1}&a_{m}b_{2}&\\dots &a_{m}b_{n}\\end{bmatrix}}\n",
     "$$\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "$\\begin{bmatrix}0 \\\\ 1 \\\\ 2 \\end{bmatrix}\\begin{bmatrix}1&2&3 \\end{bmatrix}=\\begin{bmatrix}0&0&0\\\\1&2&3 \\\\2&4&6\\end{bmatrix}$"
    ]
@@ -834,7 +840,7 @@
     "c_{ij}=a_{i1}b_{1j}+a_{i2}b_{2j}+\\cdots +a_{ik}b_{kj}=\\sum _{k=1}^{n}a_{ik}b_{kj}\n",
     "$$\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "$$\n",
     "{\\mathbf{A}}{\\mathbf{B}}=\\begin{bmatrix}0&1&2 \\\\ 3&4&5 \\\\ 6&7&8 \\end{bmatrix}\\begin{bmatrix}0&1&2 \\\\ 3&4&5 \\\\ 6&7&8 \\end{bmatrix}=\\begin{bmatrix}15&18&21\\\\42&54&66 \\\\69&90&111 \\end{bmatrix}\n",
@@ -880,7 +886,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "example 2:\n",
+    "Example 2:\n",
     "\n",
     "${\\mathbf{A}}{\\mathbf{B}}=\\begin{bmatrix}0&1&2 \\\\ 3&4&5 \\\\ 6&7&8 \\end{bmatrix}\\begin{bmatrix}0 \\\\ 3 \\\\ 6 \\end{bmatrix}=\\begin{bmatrix}15\\\\14\\\\23 \\end{bmatrix}$"
    ]
@@ -978,14 +984,14 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "$\\begin{bmatrix}1&3&5\\\\2&4&6\\end{bmatrix}^T=\\begin{bmatrix}1&2\\\\3&4\\\\5&6\\end{bmatrix}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1019,7 @@
     ")\n",
     "\n",
     "assert (A.T - AT).sum().item() == 0\n",
-    "vis.plot_matrices_as_heatmap([A, AT], [r\"$A$\", r\"$A^T$\"])"
+    "vis.plot_matrices_as_heatmap([A, A.T], [r\"$A$\", r\"$A^T$\"])"
    ]
   },
   {
@@ -1024,7 +1030,7 @@
     "\n",
     "A symmetric matrix is a square matrix that is equal to its transpose: $\\mathbf{A} = \\mathbf{A}^T$. The matrix coefficients are symmetric with respect to the diagonal.\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "${\\begin{bmatrix}1&2&6\\\\2&3&4\\\\6&4&5\\end{bmatrix}}$"
    ]
@@ -1075,7 +1081,7 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "${\\mathbf{Q}}{\\mathbf{Q^{T}}}=\\begin{bmatrix}1&-2&2 \\\\ 2&-1&-2 \\\\ 2&2&1 \\end{bmatrix}\\begin{bmatrix} 1&2&2 \\\\ -2&-1&2 \\\\ 2&-2&1 \\end{bmatrix}=\\begin{bmatrix}9&0&0\\\\0&9&0 \\\\0&0&9 \\end{bmatrix}$"
    ]
@@ -1125,7 +1131,7 @@
     "\n",
     "A matrix $\\mathbf{Q}$ with orthonormal column vectors satisfies the relation $\\mathbf{Q}^T\\mathbf{Q} = \\mathbf{Q}\\mathbf{Q}^T = \\mathbf{I}$.\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "${\\mathbf{Q}^T}{\\mathbf{Q}}=\\begin{bmatrix}{\\frac {1}{\\sqrt{2}}}&{\\frac {1}{\\sqrt{6}}}&{\\frac {1}{\\sqrt{3}}}\\\\{\\frac {-1}{\\sqrt{2}}}&{\\frac {1}{\\sqrt{6}}}&{\\frac {1}{\\sqrt{3}}}\\\\0&{\\frac {-2}{\\sqrt{6}}}&{\\frac {1}{\\sqrt{3}}}\\end{bmatrix}\\begin{bmatrix}{\\frac {1}{\\sqrt{2}}}&{\\frac {-1}{\\sqrt{2}}}&0\\\\{\\frac {1}{\\sqrt{6}}}&{\\frac {1}{\\sqrt{6}}}&{\\frac {-2}{\\sqrt{6}}}\\\\{\\frac {1}{\\sqrt{3}}}&{\\frac {1}{\\sqrt{3}}}&{\\frac {1}{\\sqrt{3}}}\\end{bmatrix}=\\begin{bmatrix}1&0&0\\\\0&1&0 \\\\0&0&1 \\end{bmatrix}$"
    ]
@@ -1168,11 +1174,11 @@
    "source": [
     "### Hermitian matrix\n",
     "\n",
-    "A Hermitian matrix is a complex square matrix that is equal to its conjugate transpose:\n",
+    "A Hermitian matrix is a complex matrix that is equal to its conjugate transpose:\n",
     "\n",
     "$$ \\mathbf{A}=\\overline{\\mathbf{A}}^T $$\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "${\\mathbf{A} = \\begin{bmatrix}1&3-{\\mathrm  {j}}&4\\\\3+{\\mathrm  {j}}&-2&-6+{\\mathrm  {j}}\\\\4&-6-{\\mathrm  {j}}&5\\end{bmatrix},} \\quad {\\overline{\\mathbf{A}} = \\begin{bmatrix}1&3+{\\mathrm  {j}}&4\\\\3-{\\mathrm  {j}}&-2&-6-{\\mathrm  {j}}\\\\4&-6+{\\mathrm  {j}}&5\\end{bmatrix}}$\n",
     "\n",
@@ -1215,14 +1221,14 @@
    "source": [
     "### Unitary matrix\n",
     "\n",
-    "A unitary matrix is a complex square matrix whose column vectors form an orthonormal basis. The matrix product of a unitary matrix with its conjugate transpose yields the identity matrix:\n",
+    "A unitary matrix is a complex square matrix whose column vectors form an orthonormal basis. The matrix product of a unitary matrix with its conjugate transpose, denoted by $\\dagger$, yields the identity matrix:\n",
     "\n",
-    "$$ \\mathbf{Q}\\mathbf{Q}^H = \\mathbf{I} $$\n",
+    "$$ \\mathbf{Q}\\mathbf{Q}^\\dagger = \\mathbf{I} $$\n",
     "\n",
-    "example:\n",
+    "Example:\n",
     "\n",
     "${\\mathbf{Q}={\\frac {1}{2}}\\begin{bmatrix}1+i&1-i\\\\1-i&1+i\\end{bmatrix}},\\quad\n",
-    "{\\mathbf{Q}\\mathbf{Q^{H}}={\\frac {1}{4}}\\begin{bmatrix}1+i&1-i\\\\1-i&1+i\\end{bmatrix}}{\\begin{bmatrix}1-i&1+i\\\\1+i&1-i\\end{bmatrix}}=\\begin{bmatrix}1&0\\\\0&1 \\end{bmatrix}= \\mathbf{I}$"
+    "{\\mathbf{Q}\\mathbf{Q}^\\dagger={\\frac {1}{4}}\\begin{bmatrix}1+i&1-i\\\\1-i&1+i\\end{bmatrix}}{\\begin{bmatrix}1-i&1+i\\\\1+i&1-i\\end{bmatrix}}=\\begin{bmatrix}1&0\\\\0&1 \\end{bmatrix}= \\mathbf{I}$"
    ]
   },
   {
@@ -1295,7 +1301,7 @@
     "     [1.0, 0.0, -5.0],\n",
     "     [0.0, 1.0,  4.0]]\n",
     ")\n",
-    "# Currently, PyTorch has no support for complex numbers; the matrix above has real eigenvalues\n",
+    "# Currently, PyTorch has no complete support for complex numbers; the matrix above has real eigenvalues\n",
     "val, vec = pt.eig(A, eigenvectors=True)\n",
     "Q = vec\n",
     "L = pt.diag(val[:, 0])\n",
@@ -1314,11 +1320,11 @@
     "\n",
     "The SVD is a factorization of a real or complex matrix that generalizes the eigen-decomposition of a square matrix to any ${ m\\times n}$ matrix:\n",
     "\n",
-    "$$\\mathbf{A} = \\mathbf{U}\\mathbf{\\Sigma}\\mathbf{V}^H$$\n",
+    "$$\\mathbf{A} = \\mathbf{U}\\mathbf{\\Sigma}\\mathbf{V}^\\dagger$$\n",
     "\n",
     "- $\\mathbf{U}$: is a $m \\times m$ unitary matrix; the columns of $\\mathbf{U}$ are called left singular vectors\n",
     "- $\\mathbf{\\Sigma}$ is a $m\\times n$ matrix containing a diagonal matrix of dimension $\\mathrm{min}(m, n)$; the diagonal elements are called singular values\n",
-    "- $\\mathbf{V}^H$ is a $n\\times n$ unitary matrix; the columns of $\\mathbf{V}^H$ are called right singular vectors\n",
+    "- $\\mathbf{V}^\\dagger$ is a $n\\times n$ unitary matrix; the columns of $\\mathbf{V}^\\dagger$ are called right singular vectors\n",
     "\n",
     "example:\n",
     "\n",
