Correct sketch in SVD notebook.

--- a/docs/source/notebooks/svd_cylinder.ipynb
+++ b/docs/source/notebooks/svd_cylinder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "small-engineering",
+   "id": "signed-southwest",
    "metadata": {},
    "source": [
     "# SVD of the flow past a cylinder\n",
@@ -12,9 +12,9 @@
     "$$\n",
     "  Re = \\frac{U_m d}{\\nu} = 100.\n",
     "$$\n",
-    "The simulation was conducted in OpenFOAM. The simulation domain is shown in the sketch below. All dimensions are given in terms of cylinder diameters. TODO: correct sketch\n",
+    "The simulation was conducted in OpenFOAM. The simulation domain is shown in the sketch below. All dimensions are given in terms of cylinder diameters.\n",
     "\n",
-    "<img src=\"figures/cylinder_domain.png\" width=800 />\n",
+    "<img src=\"figures/cylinder_domain.svg\" width=800 />\n",
     "\n",
     "The goal of this tutorial is to demonstrate:\n",
     "- how to assemble a data matrix based on a selected subset of a scalar field time series\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "mental-internet",
+   "id": "lasting-harvest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecological-storage",
+   "id": "medium-category",
    "metadata": {},
    "source": [
     "## Assembling the data matrix\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "synthetic-conference",
+   "id": "ancient-possibility",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imported-insider",
+   "id": "raised-alloy",
    "metadata": {},
    "source": [
     "### Creating a mask\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "subjective-extent",
+   "id": "latter-feelings",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fabulous-momentum",
+   "id": "caring-aside",
    "metadata": {},
    "source": [
     "The mask is a 1D boolean tensor whose elements are `True` if the corresponding vertex is located within the specified bounds. Summing up the mask's elements yields the number of selected vertices (`True` and `False` are cast to 1 and 0, respectively)."
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "secondary-narrative",
+   "id": "light-variable",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-grill",
+   "id": "random-result",
    "metadata": {},
    "source": [
     "We can have a look at the selected vertices using a simple scatter plot. For larger meshes and 3D data, it is more convinient to save the mask in the *flowTorch* HDF5 format and to visualize it in *ParaView* TODO: add reference."
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "lined-creature",
+   "id": "closing-yugoslavia",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "skilled-process",
+   "id": "relative-acrylic",
    "metadata": {},
    "source": [
     "### Loading the snapshots and extracting the mean\n",
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "intelligent-render",
+   "id": "unsigned-essay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "practical-marathon",
+   "id": "returning-helmet",
    "metadata": {},
    "source": [
     "## Singular value decomposition\n",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "forty-population",
+   "id": "criminal-namibia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "classified-merit",
+   "id": "stable-trinity",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "macro-kentucky",
+   "id": "loving-doctrine",
    "metadata": {},
    "source": [
     "### Singular values\n",
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "thousand-honor",
+   "id": "fleet-match",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "terminal-jersey",
+   "id": "monthly-sodium",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "timely-albert",
+   "id": "egyptian-landing",
    "metadata": {},
    "source": [
     "### Left singular vectors\n",
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "detected-western",
+   "id": "optional-hayes",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "behavioral-water",
+   "id": "gorgeous-mapping",
    "metadata": {},
    "source": [
     "### Right singular vectors\n",
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bottom-vanilla",
+   "id": "pleasant-jumping",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "crucial-distance",
+   "id": "commercial-faculty",
    "metadata": {},
    "outputs": [],
    "source": []
